:sparkles: [#333] add send_cloudevents option to send notifications as cloudevents
